objects/vlocity_ins__VlocityErrorLogEntry__c.object
<CustomObject>
    <description>Populated after an error in an integration procedure via a data raptor bundle.  Can be a callout error, upsert error, etc.</description>
    <fields>
        <fullName>vlocity_ins__Action__c</fullName>
        <description>The callout action: PUT, POST, etc</description>
        <inlineHelpText>The callout action: PUT, POST, etc</inlineHelpText>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContextId__c</fullName>
        <description>unique identifier from an external system</description>
        <externalId>true</externalId>
        <inlineHelpText>unique identifier from an external system</inlineHelpText>
        <label>Context Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ErrorCode__c</fullName>
        <description>Error Code</description>
        <inlineHelpText>Error Code</inlineHelpText>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ErrorMessage__c</fullName>
        <description>Stores the Error Message</description>
        <inlineHelpText>Stores the Error Message</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ErrorTime__c</fullName>
        <description>The date and time that the error occurred.</description>
        <inlineHelpText>The date and time that the error occurred.</inlineHelpText>
        <label>Error Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ErrorType__c</fullName>
        <description>A default value set in the data raptor bundle ex: Callout Error, Upsert Error</description>
        <inlineHelpText>A default value set in the data raptor bundle ex: Callout Error, Upsert Error</inlineHelpText>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Callout Error</fullName>
                </value>
                <value>
                    <fullName>Upsert Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__InputData__c</fullName>
        <description>Records the input data which lead to the error log entry</description>
        <inlineHelpText>Records the input data which lead to the error log entry</inlineHelpText>
        <label>Input Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectName__c</fullName>
        <description>Name of the Object resulting to the error</description>
        <inlineHelpText>Name of the Object resulting to the error</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceName__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceType__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Integration Procedure</fullName>
                </value>
                <value>
                    <fullName>Dataraptor</fullName>
                </value>
                <value>
                    <fullName>Omniscript</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityInteractionToken__c</fullName>
        <externalId>true</externalId>
        <label>Vlocity Interaction Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Error Log Entry</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Error Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>